# rusty-rails

./: .bowerrc  .env  .gitignore  .rust-version  .toolchain  Cargo.toml  README.md  bower.json
app/: database.rs  errors.rs  formats.rs  layouts.rs  routes.rs  schema.rs  server.rs
app/assets/: .javascripts.js.swp  javascripts.js  style.scss  stylesheets.scss
app/assets/javascripts/: application.js
app/assets/stylesheets/: _colors.scss  _fonts.scss  _rhythm.scss  application.scss  entries.scss  layout.scss  pages.scss
app/assets/stylesheets/pages/: portfolio.scss  resume.scss
app/controllers/: mod.rs
app/controllers/entries/: controller.rs  mod.rs
app/controllers/entries/views/: form.rs  index.rs  mod.rs  show.rs
app/controllers/pages/: controller.rs  mod.rs
app/controllers/pages/views/: index.rs  mod.rs  portfolio.rs  resume.rs
app/controllers/pictures/: mod.rs
app/controllers/pictures/views/: form.rs  index.rs  mod.rs  show.rs
app/controllers/portfolio/: mod.rs
app/controllers/portfolio/views/: form.rs  index.rs  mod.rs  show.rs
app/entries/: entry.rs  mod.rs
app/entries/views/: index.rs  mod.rs
app/helpers/: db.rs  mod.rs  view.rs
app/locales/: en.toml  mod.rs
app/models/: entry.rs  mod.rs  picture.rs
app/pages/views/: index.rs
assets/: application.css  application.css.map  application.scss
migrations/20160205225446_create_entries_table/: down.sql  up.sql
migrations/20160703022150_create_pictures/: down.sql  up.sql
migrations/20160803225055_scaffold_entries/: up.sql
public/assets/: javascripts.js  javascripts.js.map  style.css  style.css.map  stylesheets.css  stylesheets.css.map
src/: content.rs  db_transaction.rs  generate.rs  main.rs  monitor.rs  routes.rs  server.rs  start.rs  task.rs  tasks.rs
src/app/: mod.rs
src/app/assets/: style.scss
src/app/entries/: mod.rs
src/app/entries/views/: index.rs  show.rs
src/app/pages/: mod.rs
src/assets/: style.scss
src/generate/: scaffold.rs
src/generators/: controller.rs  migration.rs  mod.rs  model.rs  model.rst  rest-controller.rst  rest-views-form-field.rst  rest-views-form.rst  rest-views-index.rst  rest-views-show.rst  scaffold.rs  view.rs
src/generators/scaffold/: controller.tmpl.rs  model.tmpl.rs  views-form-field.tmpl.rs  views-form.tmpl.rs  views-index.tmpl.rs  views-mod.rst  views-show-field.rst  views-show-field.tmpl.rs
src/generators_old/scaffold/: controller.tmpl.rs  model.tmpl.rs  views-form-field.tmpl.rs  views-form.tmpl.rs  views-index.tmpl.rs  views-show-field.tmpl.rs  views-show.tmpl.rs
src/tasks/: javascripts.rs  mod.rs  stylesheets.rs
src/views/: dashboard.rs  homepage.rs  mod.rs
views/: about.hbs  index.hbs  layout.hbs
