[package]
name = "rusty-rails"
version = "0.1.0"
authors = ["Jaden Carver <jaden.carver@gmail.com>"]

[dependencies]
iron = "0.3.0"
persistent = "^0.1.0"
router = { version = ">=0.1.1", git = "https://github.com/jadencarver/router.git", branch = "0.1.1" }
params = "^0.2.2"
maud = "^0.9.0"
maud_macros = "^0.9.0"
logger = "^0.0.3"
clap = "^2.5.2"
staticfile = { version = "^0.2.0", features = ["cache"], git = "https://github.com/jadencarver/staticfile.git", branch = "router-0.2.0" }
glob = "^0.2.11"
diesel = "0.6.0"
diesel_codegen = { version = "0.6.0", default-features = false, features = ["nightly", "postgres"], git = "https://github.com/sgrif/diesel.git" }
diesel_cli = "0.6.0"
dotenv = "^0.8.0"
dotenv_macros = "^0.8.0"
serde = "^0.6"
serde_json = "^0.6"
r2d2 = "^0.7"
r2d2-diesel = { version = "^0.6.0", git = "https://github.com/sgrif/r2d2-diesel.git" }
termion = "^1.0.5"
notify = "^2.5.0"
rand = "0.3"
chrono = "^0.2"

[[bin]]
name = "start"
path = "src/monitor.rs"

[[bin]]
name = "server"
path = "app/server.rs"

[[bin]]
name = "task"
path = "src/task.rs"

[[bin]]
name = "generate"
path = "src/generate.rs"
