[package]
name = "rusty-rails"
version = "0.1.0"
authors = ["Jaden Carver <jaden.carver@gmail.com>"]

[dependencies]
iron = "*"
persistent = "*"
router = { version = "*", git = "https://github.com/jadencarver/router.git", branch = "master" }
params = "*"
maud = "*"
maud_macros = "*"
logger = "*"
clap = "*"
staticfile = { version = "*", features = ["cache"], git = "https://github.com/jadencarver/staticfile.git", branch = "master" }
glob = "*"
diesel = "*"
diesel_codegen = { version = "*", default-features = false, features = ["postgres"], git = "https://github.com/sgrif/diesel.git" }
diesel_cli = "*"
dotenv = "*"
dotenv_macros = "*"
serde = "*"
serde_json = "*"
r2d2 = "*"
r2d2-diesel = { version = "*", git = "https://github.com/sgrif/r2d2-diesel.git" }
termion = "*"
notify = "*"
rand = "*"
chrono = "*"

[[bin]]
name = "start"
path = "src/monitor.rs"

[[bin]]
name = "server"
path = "app/server.rs"

[[bin]]
name = "task"
path = "src/task.rs"

[[bin]]
name = "generate"
path = "src/generate.rs"
