[package]
name = "rusty-rails"
version = "0.1.0"
authors = ["Jaden Carver <jaden.carver@gmail.com>"]

[dependencies]
iron = "*"
persistent = "*"
router = { version = "*", path = "../rust/router" }
params = "*"
maud = { version = "*", features = ["iron"] }
maud_macros = "*"
logger = "*"
clap = "*"
staticfile = { version = "*", features = ["cache"], path = "../rust/staticfile" }
glob = "*"
#diesel = "*"
#diesel_codegen = { version = "*", default-features = false, features = ["postgres"] } # git = "https://github.com/sgrif/diesel.git" }
#diesel_cli = "*"
dotenv = { version = "*", git = "https://github.com/golddranks/rust-dotenv.git" }
#dotenv_macros = { version = "*", git = "https://github.com/golddranks/rust-dotenv.git" }
#dotenv_codegen = { version = "*", git = "https://github.com/golddranks/rust-dotenv.git" }
serde = "*"
serde_json = "*"
#r2d2 = "*"
#r2d2-diesel = { version = "*", git = "https://github.com/sgrif/r2d2-diesel.git" }
termion = "*"
notify = "*"
rand = "*"
chrono = "*"
ws = "*"

[[bin]]
name = "start"
path = "src/monitor.rs"

[[bin]]
name = "server"
path = "app/server.rs"

[[bin]]
name = "task"
path = "src/task.rs"

[[bin]]
name = "generate"
path = "src/generate.rs"
